# static-side-deployer

./: Cargo.toml  LICENSE  README.md
src/: archive.rs  auth.rs  caddy.rs  config.rs  deploy.rs  main.rs  manifest.rs
